--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ black = "^24.0.0"
 ruff = "^0.1.0"
 mypy = "^1.8.0"
 pytest-asyncio = "^1.2.0"
+faker = "^37.12.0"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
