--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ email-validator = "^2.3.0"
 greenlet = "^3.2.4"
 openpyxl = "^3.1.5"
 cryptography = "^44.0.0"
+annotated-types = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
